--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-  background-color: #030512;
+  /* background-color: #030512; */
+  background-color: #1d1f2b;
   margin: 0;
   padding: 0;
 }
@@ -28,4 +29,54 @@ body{
   text-align: right;
   margin-left: 40%;
   padding-right: 20px;
+}
+table, th {
+  border-collapse: collapse;
+  margin-left: 15%;
+  /* margin-right: 100px; */
+ border: 1px solid #F70303;
+ height: 50px;
+}
+.headingsecond{
+  color: white;
+  padding: 25px;
+  margin-top: 8rem;
+  text-align: center;
+}
+.firstRow{
+  color: white;
+  background-color:#F70303;
+  padding: 25px;
+  margin: 30px;
+  text-align: center;
+}
+.list{
+  text-align: center;
+  padding: auto;
+}
+.secondRow{
+  color: white;
+}
+.image{
+  height: 150px;
+  width: 150px;
+}
+.image_name{
+  text-align: center;
+  margin-top: 30px;
+  color: white
+  
+}
+.booking{
+  font-family: sans-serif;
+  text-align: center;
+  color: white;
+  font-weight: bolder;
+  font-size: x-large;
+}
+footer{
+  color: white;
+  text-align: center;
+  background-color: rgb(139, 99, 99);
+  padding: 20px;
 }
